nextcloud/nextcloud/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-app
  namespace: nextcloud
  labels:
    app: nextcloud
    component: app
spec:
  ports:
  - port: 80
  selector:
    app: nextcloud
    component: app
    tier: frontend
